week2 jvm homework