@@ -1,1 +1,6 @@
 学习笔记
+
+--本地启动GC分析工具
+javac -encoding GBK GCLogAnalysis.java
+--启动时打印GC处理信息
+java -XX:+PrintGCDetails GCLogAnalysis
